fix(html-aside-padding): changed to percentage to make it more responsive fix(html-app-atmosphere): readjusted the feel of the application on opening fix(html-map-load-spinner): Added spinner to map when it is loading fix(html-searchbuttonload-spinner): Add spinner to search button when loading fix(css-np-card): Add hover effect on np-card fix(css): corresponding styling to match ones made html fix(index.js): Small changes to match the ones ones on html and css, feat(index.js): add the dynamic map load spin to come on and off just at the right time feat(helper.js): a new file to hold helper functions mapLoaderSpinVisible, mapLoaderSpinHidden, searchButtonSpinOn and searchButtonSpinoff

--- a/styles/style.css
+++ b/styles/style.css
@@ -65,7 +65,7 @@ input[type="search"]{
 input[type="search"]:focus{
     outline: none;
 }
-button#submit{
+.submit, .spinner{
     background-color: var(--chosen-grey);
     color: var(--bluish);
     height: 40px;
@@ -74,8 +74,14 @@ button#submit{
     cursor: pointer;
     transition: color 0.5s;
 }
-button#submit:hover{
+button.submit:hover{
     color: #0404a8;
+}
+button.spinner{
+    display: none;
+}
+button > .fa-spinner{
+    animation: spin 2s linear infinite;
 }
 #autocomplete-lists{
     position: absolute;
@@ -102,7 +108,7 @@ button#submit:hover{
 }
 aside#navigation{
     width: 100%;
-    padding: 10px;
+    padding: 0.5%;
     box-shadow: 0px 2px 2px 2px var(--shadow-grey);
 }
 div#main-container{
@@ -111,6 +117,7 @@ div#main-container{
     flex-wrap: wrap;
 }
 main#main{
+    position: relative;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -122,12 +129,15 @@ img#map{
     width: 800px;
     height: 450px;
 }
-
+#error{
+    font-size: 1.3em;
+    text-align: justify;
+}
 section#place-weather-board{
     background-color: white;
     border-radius: 5px;
     box-shadow: 1.5px 1.5px 1.5px 1.5px var(--shadow-grey);
-    padding: 20px;
+    padding: 3%;
 }
 
 #place-board{
@@ -196,6 +206,9 @@ button.temperature-converter{
 h3.center{
     text-align: center;
     padding: 10px;
+}
+#share-icon-section, #photos-container, #notable-places-container{
+    display: none;
 }
 #share-icon-section{
     margin: 10px 0px;
@@ -270,10 +283,16 @@ button.dir{
     margin: 10px 0px;
     border-top: 1px solid var(--chosen-grey);
 }
-div.np-card{
+.np-card{
     display: flex;
     flex-direction: row;
-    margin: 10px 0px;
+    margin: 5px 0px;
+    border-radius: 12px;
+    justify-content: space-around;
+}
+.np-card:hover{
+    background-color: var(--chosen-grey);
+    box-shadow: 1px 1px 1px 1px var(--shadow-grey);
 }
 div.np-card-desc{
     flex: 68%;
@@ -282,12 +301,14 @@ div.np-card-desc{
 }
 img.np-icon{
     width: 100%;
-    height: 100px;
-    border-radius: 5px;
+    height: 160px;
 }
 
-.address, .category-name, .star{
+address, .category-name, .star{
     font-size: 0.8rem;
+}
+address{
+    text-align: justify;
 }
 .star{
     color: #aaa;
@@ -309,6 +330,15 @@ div.loaderspin{
     border-top: 2px solid dodgerblue;
     border-radius: 50%;
     animation: spin 1s linear infinite;
+}
+#main > .loaderspin{
+    border-width: 4px;
+    visibility: hidden;
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    top: 38%;
+    left: 50%;
 }
 @keyframes spin{
     0% {transform: rotate(0deg);}
